# ImGui-Wrapper

./: CMakeLists.txt  README.md  vcpkg.json
cmake/: Warnings.cmake
demo/: CMakeLists.txt
demo/01-Starter/: MainWindow.hpp  main.cpp
demo/02-FileExplorer/: DeleteFilePopup.hpp  FileSystemView.hpp  MainWindow.hpp  RenameFilePopup.hpp  main.cpp
demo/03-Plotter/: MainWindow.hpp  Plot.hpp  main.cpp
demo/04-TextEditor/: MainWindow.hpp  main.cpp
demo/99-MyProject/: MainWindow.hpp
imw/: CMakeLists.txt  imw.hpp
imw/impl/: Application.hpp  PlotBase.hpp  PopupBase.hpp  WindowBase.hpp
